--- a/candev_finstat/templates/base.html
+++ b/candev_finstat/templates/base.html
@@ -36,6 +36,9 @@
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'indicators:index' %}">Indicators</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
           </ul>
@@ -61,7 +64,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
       <script src="{% static 'js/project.js' %}"></script>
-      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>     
+      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     {% endblock javascript %}
   </body>
 </html>
