--- a/candev_finstat/templates/indicators/gdp.html
+++ b/candev_finstat/templates/indicators/gdp.html
@@ -29,6 +29,7 @@
         hAxis: {
           title: 'Month'
         },
+        legend: { position: 'bottom' }
       };
 
       var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
