--- a/candev_finstat/templates/indicators/gdp.html
+++ b/candev_finstat/templates/indicators/gdp.html
@@ -3,17 +3,19 @@
 {% block content %}
 <br />
 <div id="chart_div"></div>
+<hr />
+<div id="table_div"></div>
 {% endblock content %}
 
 {% block javascript %}
   {{ block.super }}
   <script>
-  google.charts.load('current', {packages: ['corechart', 'line']});
+  google.charts.load('current', {packages: ['corechart', 'line', 'table']});
   google.charts.setOnLoadCallback(drawBasic);
 
   function drawBasic() {
       var data = new google.visualization.DataTable();
-      data.addColumn('string', 'X');
+      data.addColumn('string', 'Month');
       data.addColumn('number', 'All fields');
       data.addColumn('number', 'Food');
       data.addColumn('number', 'Shelter');
@@ -32,9 +34,12 @@
         legend: { position: 'bottom' }
       };
 
+      // Line chart
       var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-
       chart.draw(data, options);
+      // Table
+      var table = new google.visualization.Table(document.getElementById('table_div'));
+      table.draw(data, {showRowNumber: true, width: '100%', height: '100%'});
 
       var columns = [];
       var series = {};
