--- a/candev_finstat/templates/indicators/gdp.html
+++ b/candev_finstat/templates/indicators/gdp.html
@@ -39,7 +39,7 @@
       chart.draw(data, options);
       // Table
       var table = new google.visualization.Table(document.getElementById('table_div'));
-      table.draw(data, {showRowNumber: true, width: '100%', height: '100%'});
+      table.draw(data, {showRowNumber: true, width: '100%', height: '100%', pageSize: 20});
 
       var columns = [];
       var series = {};
