--- a/candev_finstat/templates/indicators/gdp.html
+++ b/candev_finstat/templates/indicators/gdp.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<br />
+<h1 style="text-align: center;">Consumer Price Index</h1>
+
 <div id="chart_div"></div>
 <hr />
 <div id="table_div"></div>
@@ -37,6 +38,7 @@
       // Line chart
       var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
       chart.draw(data, options);
+
       // Table
       var table = new google.visualization.Table(document.getElementById('table_div'));
       table.draw(data, {showRowNumber: true, width: '100%', height: '100%', pageSize: 20});
